[project]
name = "upstox-login-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.7.0",
    "pandas>=2.3.3",
    "pyotp>=2.9.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.1",
    "selenium>=4.44.0",
    "tenacity>=9.1.4",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["login", "auth"]
